add bubble pages

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div class="content">
       <h2>Hello World,<br /> I'm <span>Phuong</span></h2>
       <p>I'm into <span class="typing-text"></span></p>
-      <a href="#about" class="btn"><span>About Me</span>
+      <!-- <a href="#about" class="btn"><span>About Me</span>
         <i class="fas fa-arrow-circle-down"></i>
-      </a>
+      </a> -->
       <div class="socials">
         <ul class="social-icons">
           <li><a class="facebook" aria-label="Facebook" href="https://www.facebook.com/Phuonng.Ole" target="_blank"><i
