--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="phuongole profile, profile, phuongole, full stack dev, personal profile, profile design, profile website" />
   <meta name="description" content="Welcome to Phuong14's Profile. Full-Stack Web Developer and Devops Engineer" />
+  <meta name="google-site-verification" content="466c61677b46495253545F536974655f54484952447d" />
   <link rel="stylesheet" href="./assets/css/font-awesome5-15-3.min.css" />
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
